# 57north-bank

./: .gitignore  Cargo.toml  LICENCE.md
data/: db  products
src/: barcode.rs  completion.rs  db.rs  main.rs  products.rs
