[package]
name = "h57bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0"
serde = { version = "1", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "57bank"
path = "src/main.rs"
