[package]
name = "h57bank"
version = "0.1.2"
edition = "2021"
authors = ["Q <q@magicalcodewit.ch>"]
description = "A command line tool for keeping track of people's balances at the 57North Snack Bank"
repository = "https://github.com/TheEnbyperor/57north-bank"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0"
serde = { version = "1", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode-generator = "4"
rustyline = "11.0.0"
radix_trie = "0.2.1"
pcsc = "2.8.0"
tokio = { version = "1.28.0", features = ["full"] }
nfc1 = "0.5.2"

[[bin]]
name = "57bank"
path = "src/main.rs"
